# SClone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  SWindow.cpp  SWindow.h  main.cpp
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
